[package]
authors = ['CESS LAB']
edition = '2021'
license = 'Unlicense'
name = 'cess-node-runtime'
repository = 'https://github.com/CESSProject/cess'
version = '0.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.14", default-features = false }

# Frontier
fp-rpc = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-self-contained = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-base-fee = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-ethereum = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-evm = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }

cp-scheduler-credit = { default-features = false, version = "0.1.0", path = "../primitives/scheduler-credit" }
cp-crypto = { default-features = false, version = "0.1.0", path = "../primitives/crypto" }
pallet-scheduler-credit = { default-features = false, version = "0.1.0", path = "../c-pallets/scheduler-credit" }

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '5.0.0-dev'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
optional = true
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
optional = true
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.hex-literal]
optional = true
version = '0.3.4'

[dependencies.pallet-rrsc]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.cessp-consensus-rrsc]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '5.0.0'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-session]
default-features = false
features = ['historical',]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-child-bounties]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-preimage]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-cess-staking]
default-features = false
path = '../c-pallets/staking'
version = '4.0.0-dev'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-bags-list]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-try-runtime]
version = "0.10.0-dev"
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
optional = true

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-bounties]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-mmr]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-assets]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-asset-tx-payment]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../c-pallets/sminer'
version = '0.6.0'

# local dependencies
[dependencies.pallet-segment-book]
default-features = false
path = '../c-pallets/segment-book'
version = '0.6.0'

# local dependencies
[dependencies.pallet-file-bank]
default-features = false
path = '../c-pallets/file-bank'
version = '0.6.0'

# local dependencies
[dependencies.pallet-file-map]
default-features = false
path = '../c-pallets/file-map'
version = '0.6.0'

[dependencies.pallet-oss]
default-features = false
path = '../c-pallets/oss'
version = '0.6.0'

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-file-bank/runtime-benchmarks',
    'pallet-file-map/runtime-benchmarks',
		'pallet-oss/runtime-benchmarks',
    'pallet-cess-staking/runtime-benchmarks',
    'pallet-segment-book/runtime-benchmarks',
    'pallet-sminer/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    "pallet-contracts/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
		"pallet-evm/runtime-benchmarks",
]
std = [
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-bounties/std",
    "pallet-collective/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-im-online/std",
    "pallet-membership/std",
    "pallet-offences/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-cess-staking/std",
    "pallet-treasury/std",
    "pallet-file-bank/std",
    "pallet-segment-book/std",
    "pallet-sminer/std",
    "pallet-file-map/std",
		"pallet-oss/std",
    "pallet-preimage/std",
    "pallet-assets/std",
    "pallet-child-bounties/std",
    "pallet-mmr/std",
    "sp-io/std",
    "pallet-indices/std",
    "sp-authority-discovery/std",
    "sp-staking/std",
    'codec/std',
	  "frame-try-runtime/std",
    "frame-benchmarking/std",
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-rrsc/std',
    'pallet-bags-list/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    "pallet-contracts/std",
		"pallet-contracts-primitives/std",
		"pallet-contracts-rpc-runtime-api/std",
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'cessp-consensus-rrsc/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "fp-rpc/std",
		"fp-self-contained/std",
		"pallet-base-fee/std",
		"pallet-dynamic-fee/std",
		"pallet-ethereum/std",
		"pallet-evm/std",
		"pallet-evm-precompile-simple/std",
		"pallet-evm-precompile-sha3fips/std",
    "cp-scheduler-credit/std",
    "cp-crypto/std",
    "pallet-scheduler-credit/std",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-rrsc/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-cess-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-file-bank/try-runtime",
]
